# LightAgent

./: .gitignore  README.md  WORKFLOW_IMPLEMENTATION_SUMMARY.md  bash.exe.stackdump  config_example.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.claude/: CLAUDE.md  settings.local.json
docs/: AGENT_CREATION.md  FUNCTION_CALLING.md  MEMORY_STORAGE.md  MIGRATION_GUIDE.md  MULTI_WORKFLOW_SYSTEM.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  PROMPT_ENGINEERING.md  QUICKSTART.md  README.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_FILE_PROMPTS.md  WORKFLOW_FILE_PROMPTS_SUMMARY.md  WORKFLOW_MULTI_GUIDE.md  WORKFLOW_PROMPTS_AND_TOOLS.md  WORKFLOW_QUICK_REFERENCE.md
examples/: basic_agent.py  file_memory.py  file_tools_README.md  file_tools_usage.py  memory_storage.py  middleware_agent.py  multi_agent.py  multi_model_agent.py  prompt_engineering.py  prompt_loader_example.py  rag_agent.py  simple_demo.py  simplified_usage.py  workflow_advanced_example.py  workflow_multi_example.py  workflow_types_example.py
examples/prompts/code_execute_refine/: python.yaml
examples/prompts/human_loop/: content_review.yaml
examples/prompts/interactive/: customer_service.yaml
examples/prompts/planning/: default.yaml  research.yaml  simple.txt
examples/prompts/sequential/: default.yaml
examples/workflow/: advanced_workflow.py  basic_workflow.py
lightagent/: __init__.py
lightagent-workflow/: README.md  __init__.py  base.py  config.py  engine.py  integration.py  manager.py  prompt_loader.py  prompts.py  tools.py
lightagent-workflow/planning/: __init__.py  planner.py  task.py
lightagent-workflow/prompts/: __init__.py  manager.py  template.py
lightagent-workflow/types/: __init__.py  code_execute.py  human_loop.py  interactive.py  planning.py  sequential.py
lightagent/core/: __init__.py  agent.py  middleware.py  protocol.py
lightagent/memory/: __init__.py  base.py
lightagent/memory/stores/: __init__.py  file.py  memory.py  mysql.py  postgres.py  sqlite.py
lightagent/models/: __init__.py  base.py  factory.py  schemas.py
lightagent/models/providers/: __init__.py  anthropic.py  mock.py  ollama.py  openai.py
lightagent/tools/: __init__.py  base.py  file_tools.py.bak  function_tool.py  mcp_tool.py  rag_tool.py
lightagent/tools/file_tools/: __init__.py  config.py  create_directory.py  get_file_info.py  list_directory.py  read_file.py  search_files.py  write_file.py
lightagent/workflow/: README.md  __init__.py  base.py
tests/: README.md  __init__.py  test_agent.py  test_file_tools.py  test_memory_stores.py  test_models_providers.py  test_openviking.py  test_workflow.py
(+4 files in other folders)
